--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "env": {
     "browser": true,
+    "jest": true,
     "es2021": true,
     "node": true
   },
@@ -11,12 +12,27 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "react-hooks"],
-  "extends": ["eslint:all", "plugin:react/all"],
+  "plugins": ["react", "react-hooks", "prettier"],
+  "extends": ["eslint:all", "plugin:react/all", "prettier"],
   "rules": {
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
+    "react/jsx-max-depth": "off",
+    "react/jsx-no-bind": "off",
+    "react/jsx-no-literals": "off",
     "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
-    "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
+    "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
+    "no-ternary": 0,
+    "max-len": 0,
+    "no-magic-numbers": "off",
+    "no-plusplus": "off",
+    "max-lines-per-function": 0,
+    "one-var": "off",
+    "indent": "off",
+    "sort-imports": "off",
+    "sort-vars": "warn",
+    "linebreak-style":"off",
+    "func-style": "off"
+    
   }
 }
