--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "react/jsx-no-literals": "off",
     "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
     "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
+    "no-unused-vars": "warn",
     "no-ternary": 0,
     "max-len": 0,
     "no-magic-numbers": "off",
