--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,9 @@
   "plugins": ["react", "react-hooks", "prettier"],
   "extends": ["eslint:all", "plugin:react/all", "prettier", "airbnb"],
   "rules": {
+    "comma-dangle": "off",
+    "linebreak-style": "off",
+    "quotes": "off",
     "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
     "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
     
