--- a/package.json
+++ b/package.json
@@ -61,8 +61,9 @@
     ]
   },
   "prettier": {
-    "printWidth": 90,
     "bracketSpacing": false,
+    "printWidth": 90,
+    "singleQuotes": false,
     "trailingComma": "es5"
   },
   "devDependencies": {
