some backend tweaks

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
   "rules": {
     "comma-dangle": "off",
     "linebreak-style": "off",
+    "object-curly-spacing": "off",
     "quotes": "off",
     "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
     "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
