--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "comma-dangle": "off",
     "implicit-arrow-linebreak": "off",
     "linebreak-style": "off",
+    "object-curly-newline": "off",
     "object-curly-spacing": "off",
     "quotes": "off",
     "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
