working on dynamic routing
Thanks Mitchell!

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,6 @@
 {
   "arrowParens": "always",
-  "bracketSpacing": "true",
+  "bracketSpacing": true,
   "printWidth": 85,
   "semi": false,
   "tabWidth": 2
